--- a/apify/CalinClaudiu/storelocator/merrymaids_com/requirements.txt
+++ b/apify/CalinClaudiu/storelocator/merrymaids_com/requirements.txt
@@ -3,6 +3,4 @@ sglogging
 sgrequests
 sgselenium
 bs4
-selenium.webdriver.support.ui
-selenium.webdriver.common.by
-selenium.webdriver.support
+selenium
