--- a/apify/datarhan/storelocator/jdsports_co_uk/requirements.txt
+++ b/apify/datarhan/storelocator/jdsports_co_uk/requirements.txt
@@ -1,5 +1,4 @@
-sgvalidator==0.0.71
+sgrequests==0.1.3
 lxml==4.5.2
-sgselenium==0.0.12
-sgrequests
-sglogging
+sgvalidator==0.0.71
+sgselenium==0.0.15
