--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,9 @@ repos:
     rev: 3.8.4
     hooks:
       - id: flake8
+        additional_dependencies:
+          - flake8-requirements==1.3.3
+          - flake8-safegraph-crawl==0.2
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.790
     hooks:
