--- a/apify/Shapoval1/storelocator/biaggis_com/requirements.txt
+++ b/apify/Shapoval1/storelocator/biaggis_com/requirements.txt
@@ -1,13 +1,13 @@
-usaddress==0.5.10
-certifi==2020.11.8
-cffi==1.14.3
-chardet==3.0.4
-cryptography==3.2.1
-idna==2.10
-lxml==4.6.1
-pycparser==2.20
-pyOpenSSL==19.1.0
-requests==2.24.0
-sgrequests==0.0.15
-six==1.15.0
-urllib3==1.25.11
+usaddress
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.6
+idna==3.1
+lxml==4.6.2
+pycparser
+pyOpenSSL==20.0.1
+requests==2.25.1
+sgrequests==0.1.3
+six
+urllib3==1.26.3
