--- a/apify/idev-a/storelocator/bmstores_co_uk/requirements.txt
+++ b/apify/idev-a/storelocator/bmstores_co_uk/requirements.txt
@@ -1,7 +1,4 @@
-sgrequests==
-beautifulsoup4==
-sglogging==
-lxml==
-us==
-sgzip==
-sgscrape==
+sgscrape==0.0.21
+sgvalidator==0.0.71
+sgrequests==0.1.4
+beautifulsoup4==4.9.3
