--- a/apify/nomihd/storelocator/raymourflanigan_com/requirements.txt
+++ b/apify/nomihd/storelocator/raymourflanigan_com/requirements.txt
@@ -1,4 +1,5 @@
-sgrequests
-sglogging
-# uncomment if you use selenium
-# selenium==3.141.0
+sgzip==0.2.1
+sgscrape==0.0.21
+sglogging==0.0.4
+sgrequests==0.1.3
+sgvalidator==0.0.71
