--- a/apify/himanshu/storelocator/expstores_com/requirements.txt
+++ b/apify/himanshu/storelocator/expstores_com/requirements.txt
@@ -1,5 +1,5 @@
-lxml==4.3.4
-requests==2.11.1
-beautifulsoup4==4.7.1
-sgrequests
-sglogging
+sgscrape==0.0.21
+sglogging==0.0.4
+lxml==4.5.2
+sgrequests==0.1.4
+beautifulsoup4==4.9.3
