--- a/apify/datarhan/storelocator/sixt_co_uk/requirements.txt
+++ b/apify/datarhan/storelocator/sixt_co_uk/requirements.txt
@@ -1,5 +1,4 @@
-sgvalidator==0.0.71
-sgscrape==0.0.21
-sgrequests==0.1.4
-lxml==4.5.2
 sgselenium==0.0.15
+sgvalidator==0.0.71
+lxml==4.5.2
+PyYAML==5.4.1
