--- a/apify/nomihd/storelocator/floorstogo_com/requirements.txt
+++ b/apify/nomihd/storelocator/floorstogo_com/requirements.txt
@@ -1,6 +1,6 @@
-sgrequests
-sglogging
-sgzip
+sgvalidator==0.0.71
+sgscrape==0.0.21
 lxml==4.5.2
-# uncomment if you use selenium
-# selenium==3.141.0
+sgrequests==0.1.4
+sgzip==0.2.1
+sglogging==0.0.4
