--- a/apify/quincya/storelocator/peets_com/requirements.txt
+++ b/apify/quincya/storelocator/peets_com/requirements.txt
@@ -1,5 +1,5 @@
-lxml==4.3.3
-sgrequests
-sglogging
-sgzip==0.1.0
-beautifulsoup4==4.7.1
+lxml==4.6.2
+sgrequests==0.1.4
+sgzip==0.2.1
+beautifulsoup4==4.9.3
+sglogging==0.0.4
