--- a/apify/datarhan/storelocator/chanellospizza_com/requirements.txt
+++ b/apify/datarhan/storelocator/chanellospizza_com/requirements.txt
@@ -1,5 +1,7 @@
-sgselenium==0.0.15
-lxml==4.6.2
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgpostal==0.1.0
+sgrequests==0.2.9
 sgvalidator==0.0.71
-sgrequests==0.1.8
-sgscrape==0.0.23
+sgscrape==0.2.6
+lxml==4.6.2
+sgselenium==0.1.4
