--- a/apify/datarhan/storelocator/thebetterhealthstore_com/requirements.txt
+++ b/apify/datarhan/storelocator/thebetterhealthstore_com/requirements.txt
@@ -1,4 +1,7 @@
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgselenium==0.1.4
 sgvalidator==0.0.71
+sgpostal==0.1.0
 lxml==4.6.2
-sgscrape==0.0.23
-sgrequests==0.1.8
+sgscrape==0.2.6
+sgrequests==0.2.9
