--- a/apify/nomihd/storelocator/rentokil_co_uk/requirements.txt
+++ b/apify/nomihd/storelocator/rentokil_co_uk/requirements.txt
@@ -4,3 +4,5 @@ sglogging==0.0.4
 sgselenium==0.1.4
 --extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
 sgscrape==0.2.6
+selenium-wire==4.2.5
+undetected_chromedriver==2.1.2
