--- a/apify/mtaziz/storelocator/paintedtree_com/requirements.txt
+++ b/apify/mtaziz/storelocator/paintedtree_com/requirements.txt
@@ -1,5 +1,7 @@
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgrequests==0.2.9
 sglogging==0.0.4
-sgselenium==0.0.15
-sgrequests==0.1.8
-sgscrape==0.0.23
+beautifulsoup4==4.7.1
 lxml==4.6.2
+sgscrape==0.2.6
+sgpostal==0.1.0
