--- a/apify/aleenah/storelocator/gertrudehawkchocolates_com/requirements.txt
+++ b/apify/aleenah/storelocator/gertrudehawkchocolates_com/requirements.txt
@@ -1,3 +1,7 @@
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgrequests==0.1.13
 sglogging==0.0.4
-sgrequests==0.1.8
-beautifulsoup4==4.9.3
+beautifulsoup4==4.7.1
+lxml==4.6.2
+sgscrape==0.1.13
+sgpostal==0.1.0
