--- a/apify/datarhan/storelocator/paniqescaperoom_com/requirements.txt
+++ b/apify/datarhan/storelocator/paniqescaperoom_com/requirements.txt
@@ -1,4 +1,6 @@
-lxml==4.6.2
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgpostal==0.1.0
+sgscrape==0.2.6
 sgvalidator==0.0.71
-sgrequests==0.1.12
-sgscrape==0.0.23
+lxml==4.6.2
+sgrequests==0.2.9
