--- a/apify/mtaziz/storelocator/linex_com/requirements.txt
+++ b/apify/mtaziz/storelocator/linex_com/requirements.txt
@@ -1,8 +1,10 @@
 --extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
-webdriver_manager==3.4.2
+tenacity==7.0.0
 sglogging==0.0.4
-lxml==4.6.2
-sgzip==0.10.9
-sgrequests==0.2.9
-sgselenium==0.1.4
 sgscrape==0.2.6
+sgvalidator==0.0.71
+sgselenium==0.1.4
+sgrequests==0.2.9
+sgzip==0.10.9
+webdriver_manager==3.4.2
+lxml==4.6.2
