--- a/apify/SamiaKiran/storelocator/aloyoga_com/requirements.txt
+++ b/apify/SamiaKiran/storelocator/aloyoga_com/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
 sglogging==0.0.4
 sgvalidator==0.0.71
 usaddress==0.5.10
