--- a/apify/SamiaKiran/storelocator/valuhomecenters_com/requirements.txt
+++ b/apify/SamiaKiran/storelocator/valuhomecenters_com/requirements.txt
@@ -3,4 +3,7 @@ sgrequests==0.1.13
 sgscrape==0.1.11
 sgvalidator==0.0.71
 sglogging==0.0.4
-beautifulsoup4==4.9.3
+sgvalidator==0.0.71
+sgscrape==0.2.6
+sgrequests==0.2.9
+beautifulsoup4==4.10.0
