--- a/apify/Shapoval1/storelocator/toalsbet_com/requirements.txt
+++ b/apify/Shapoval1/storelocator/toalsbet_com/requirements.txt
@@ -1,4 +1,7 @@
 --extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
-sgscrape==0.2.6
+selenium==4.1.0
+sglogging==0.0.4
 sgpostal==0.1.0
-sgrequests==0.2.9
+sgscrape==0.2.6
+sgselenium==0.1.4
+webdriver_manager==3.4.2
