--- a/apify/Shapoval1/storelocator/columbiasportswear_de/requirements.txt
+++ b/apify/Shapoval1/storelocator/columbiasportswear_de/requirements.txt
@@ -1,6 +1,7 @@
 --extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
 sgscrape==0.2.6
-lxml==4.6.2
+tenacity==7.0.0
 sgpostal==0.1.0
-httpx==0.19.0
+sglogging==0.0.4
+lxml==4.6.2
 sgrequests==0.2.9
