--- a/apify/Neha-Nadeem/storelocator/catofashions_com/requirements.txt
+++ b/apify/Neha-Nadeem/storelocator/catofashions_com/requirements.txt
@@ -1,3 +1,4 @@
-bs4==0.0.1
-sgrequests
-sglogging
+--extra-index-url https://dl.cloudsmith.io/KVaWma76J5VNwrOm/crawl/crawl/python/simple/
+sgscrape==0.2.6
+lxml==4.6.2
+sgrequests==0.2.10
